PR c++/5116, c++/764

cp:
	PR c++/5116, c++/764
	* call.c (build_new_op): Make sure template class operands are
	instantiated. Simplify arglist construction.
testsuite:
	* g++.dg/template/friend2.C: New test.

From-SVN: r48463